[package]
name = "program_scanner"
version = "0.1.0"
authors = ["Marcel Slotema <program_scanner@formalhaut.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
clap = "3.0.0-beta.1"
libusb = "0.3"
serde = { version = "1", features = ["derive"] }
